[package]
name = "text-game"
version = "0.1.0"
authors = ["Jachdich <jamesedkitching@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0.13"
termion = "1.5"

[[bin]]
name = "text-game"
path = "src/main.rs"
